--- a/MvcApplication1/MvcApplication1/MvcApplication1.csproj
+++ b/MvcApplication1/MvcApplication1/MvcApplication1.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GoogleAPI.cs" />
     <Compile Include="Services\WeatherForcastAPI.cs" />
+    <Compile Include="ViewModels\GolfCourseViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -139,6 +140,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Test\MyView.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
